# med-schedule-backend

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  check_db.py  main.py  requirements.txt  start.bat  supabase_key.txt  test_roi.py
.claude/skills/: SKILL_DATA_MODEL.md  SKILL_FRONTEND_LOGIC.md  SKILL_PDF_PARSER.md
.github/workflows/: tauri-release.yml
data/: 114-2整合課程筆試時間1.docx  exam_schedule.txt
database/: db_setup.py  models.py
docs/: All_Subjects_Subtopics.md
docs/superpowers/plans/: 2026-03-16-dot-pattern-background.md
frontend/: .env.local  .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/kokushi/: page.tsx
frontend/components/: CalendarEventModal.tsx  InteractiveTable.tsx  Sidebar.tsx  VersionWatcher.tsx
frontend/components/kokushi/: ActivityHeatmap.tsx  SubjectCard.tsx  (+2 more)
frontend/hooks/: useDashboardData.ts  useIsMobile.ts
frontend/lib/: api.ts  constants.ts  kokushi.ts
parser/: pdf_reader.py  text_extractor.py
schemas/: course_schema.py
scripts/: debug_pdf.py  fix_pbl_category.py  run_import.py
services/: course_service.py  exam_service.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_kokushi.sql  003_kokushi_checklist.sql  004_kokushi_activity.sql  005_kokushi_check_log.sql  006_kokushi_daily_target.sql
src-tauri/sidecar/: pdf_import.py
src-tauri/src/: lib.rs  main.rs
(+1 files in other folders)
