[package]
name = "med-schedule-tracker"
version = "0.1.0"
description = "NYCU Med Schedule Tracker Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "med_schedule_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
